# TextArena

./: mafia_example.py  offline_play_stateful_example.py  pyproject.toml
textarena/: __init__.py  core.py
textarena/agents/: __init__.py  basic_agents.py  stateful_agents.py
textarena/envs/SecretMafia/: env.py
textarena/memory/: __init__.py  base.py
textarena/memory/strategies/: __init__.py  mafia.py
textarena/utils/: xml_utils.py
textarena/wrappers/: __init__.py
textarena/wrappers/ObservationWrappers/: csv_logger_wrapper.py  llm_observation_wrapper.py
